--- a/cabezon/pages/hus.html
+++ b/cabezon/pages/hus.html
@@ -103,7 +103,7 @@
                                     <a href="icts.html">Interactive Communication &amp; Tracking System</a>
                                 </li>
                                 <li>
-                                    <a href="hus.html">Heads-Up Surveillance</a>
+                                    <a class="active" href="hus.html">Heads-Up Surveillance</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -120,7 +120,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Cabezón</h1>
+                        <h1 class="page-header">Heads-Up Surveillance System</h1>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -128,11 +128,23 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12"><p>Welcome to the Cabezón Administration site.</p>
-                        <p>Created by Jeremy Berglund</p><br/>
-                        <p></p></div>
-                    
+                    <h2><small>HUS Class Diagram</small></h2>
+                    <div class="col-lg-8 col-md-10"><img style="width: 100%;" src="../images/HUSClassDiagram.svg" alt=""></div>
                 </div>
+                <div class="row">
+                    <h2><small>Options on Presenting HUS Information</small></h2>
+                    <ul>
+                        <li><b>LCD Screens built into the vehicle:</b> LCD screens would be able to draw the attention of the tour passengers to the surrounding exhibits. Also, tidbits of information about the exhibit that the tour guide may not necessarily cover would be able to be presented.</li>
+                        <li><b>Transparent screens built into the vehicle’s windows:</b> The windows of the vehicle would double as a screen that could overlay information and point out where a certain exhibit or certain animals within an exhibit may be located in relation to the passenger. Through the use of arrows to point to the exhibit, overlaying circles to draw attention, and information snippets unobtrusively being displayed on the sides of the window/screen, the passengers would be able to easily see the surrounding plants and animals without missing anything.</li>
+                        <li><b>The tour guide:</b> This is a low-cost, easy-to-implement solution. Through the use of the GPS/Tracking system, the tour guide would always know where the vehicle is in relation to exhibits and would verbally relay the location of the exhibit in relation to the passengers, as well any0 pertinent information on that exhibit. This solution is, of course, much less preferable to the other two models of presenting HUS information, but it is important that all tour guides are able to do this in case part of the system breaks. </li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <h2><small>User Testing</small></h2>
+                    <p>First, only the current employees would be involved in an early Alpha testing of the Heads-Up Surveillance system. This would allow the development team to get early and often feedback as to how the system is progressing, and the second “pair of eyes” would give a new perspective on how the system is operating. Also, this would give the developers a more intimate environment in which to test before opening the park to the public.</p>
+                    <p>The next phase of user testing would be a Beta testing, in which select people from outside the organization are invited to come and test the touring system, specifically with the intent of testing the Heads-Up Surveillance system. This would occur before the park is fully open to give the developers time to present a fully-operational and high-quality product by opening day.</p>
+                    <p>Lastly, once Cabezon opens, for a period of time tour guests would be randomly selected to fill out a survey of their experience with the Heads-Up Surveillance system. This would give the developers a greater insight of the experience of a much wider customer base, showing them what needs to be improved and what could possibly be added on in the next version of the system.</p>
+                </div><br/>
                 <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
