--- a/cabezon/pages/icts.html
+++ b/cabezon/pages/icts.html
@@ -100,7 +100,7 @@
                                     <a href="ats.html">Automated Tour System</a>
                                 </li>
                                 <li>
-                                    <a href="icts.html">Interactive Communication &amp; Tracking System</a>
+                                    <a class="active" href="icts.html">Interactive Communication &amp; Tracking System</a>
                                 </li>
                                 <li>
                                     <a href="hus.html">Heads-Up Surveillance</a>
@@ -120,7 +120,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">Cabezón</h1>
+                        <h1 class="page-header">Interactive Communication &amp; Tracking System</h1>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -128,11 +128,28 @@
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12"><p>Welcome to the Cabezón Administration site.</p>
-                        <p>Created by Jeremy Berglund</p><br/>
-                        <p></p></div>
-                    
+                    <h2><small>Feasability Study</small></h2>
+                    <ul>
+                        <li><p><b>Does the system contribute to the overall objectives of the organization?</b></p><p>Yes. The goal of Cabezon is provide an interactive and fun experience for its guests, allowing them to get a close look at many exotic animals. Allowing guests on the tour interact directly with our animal specialists and handlers is an excellent way to fulfill this objective.</p></li>
+                        <li><p><b>Can the system be implemented within schedule and budget using current technology?</b></p><p>The system can implemented within schedule and budget, however there will be some additional technology needed, specifically the interactive AV system that will be installed in all tour vehicles. </p></li>
+                        <li><p><b>Can the system be integrated with other systems that are used?</b></p><p>Yes. The Interactive Communication system and Tracking system will be able to be integrated together, providing a wholesome and seamless experience for users.</p></li>
+                        <li><p><b>How would the organization cope if this system were not implemented?</b></p><p>If this system were not implemented, it would degrade the touring experience of park guests. They would have less access to information on the surrounding animals and they would be be providing with a less desirable and less wholesome experience.</p></li>
+                        <li><p><b>Does the system require technology that has not previously been used in the organization?</b></p><p>Yes. The GPS and Statistics system is already in place, but the interactive AV system does not yet exist and must be implemented in every tour vehicle as well as in the work spaces of employees so they can interact with the guests. </p></li>
+                    </ul>
                 </div>
+                <div class="row">
+                    <h2><small>Research on COTS System</small></h2>
+                    <p>Cisco’s TelePresence Server would be an ideal solution for the interactive communication system. Originally designed for highly-scalable and highly-responsive conference calls, this system would allow guests to be able to interact with our animal experts with ease. Some benefits include:</p>
+                    <ul>
+                        <li>Highly-scalable video chat</li>
+                        <li>Quick to set up</li>
+                        <li>Usable on desktops, tablets, and mobile systems, allowing the park’s animal experts to be available from almost any location</li>
+                        <li>Intuitive interfaces</li>
+                        <li>Adaptation of a video conferencing system allows us to involve as many people in the video chat as needed</li>
+                    </ul>
+                    <p>Using a COTS system, such as this one from Cisco would be greatly beneficial to us at Cabezon. Since we are trying to get the park up and running as soon as possible, this would give us more time to devote to developing other areas of the park and we would be able to spend as little time as possible on this system. If we developed our own system, we would likely have to develop a large amount of custom software and network protocols, so using a COTS system would save us time and money, allowing us to get the park operational at a sooner date.</p>
+                    <p>More information at <a href="http://www.cisco.com/c/en/us/products/conferencing/telepresence-server/index.html">http://www.cisco.com/c/en/us/products/conferencing/telepresence-server/index.html</a></p>
+                </div><br/>
                 <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
