--- a/cabezon/pages/mms.html
+++ b/cabezon/pages/mms.html
@@ -290,7 +290,7 @@
                             <a href="#"><i class="fa fa-cutlery fa-fw"></i> Feeding<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Scheduler</a>
+                                    <a href="scheduler.html">Scheduler</a>
                                 </li>
                                 <li>
                                     <a href="amd.html">Automated Meal Dispersal</a>
@@ -302,13 +302,13 @@
                             <a href="#"><i class="fa fa-bus fa-fw"></i> Tour<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Automated Tour System</a>
+                                    <a href="ats.html">Automated Tour System</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Interactive Communication &amp; Tracking System</a>
+                                    <a href="icts.html">Interactive Communication &amp; Tracking System</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Heads-Up Surveillance</a>
+                                    <a href="hus.html">Heads-Up Surveillance</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -367,7 +367,20 @@
                     </div>
                  </div>
                 <div class="row">
-                    <div class=" col-lg-7 col-md-10 panel panel-primary" style="padding: 0; margin-right: 5px; margin-left: 15px;">
+                  <!--<div class="col-lg-4 col-md-12">-->
+                   <div class="well col-lg-8 col-md-12">
+                     <h4>Add Store Location</h4>
+                     <p>To add a new store location, a staff member clicks on the “Add new location” button on the main page of the Merchandise Management System software. From there, he can enter in store details (title, description, etc.) as well as upload a predetermined store inventory from a spreadsheet or enter items individually.</p>
+                   </div>
+                   <div class="well col-lg-8 col-md-12">
+                     <h4>Upload Store Inventory</h4>
+                     <p>If a store’s inventory ever needs to be changed on a large scale, a staff member can upload to the MMS a premade spreadsheet containing the inventory information. To do this, the employee clicks on a location to view that location’s details. From there, the employee can directly upload the new spreadsheet, which will update the database with the correct inventory information.</p>
+                   </div>
+                   <div class="well col-lg-8 col-md-12">
+                     <h4>Update Item Details</h4>
+                     <p>When an item’s details need to be changed, a staff member can do that manually from the MMS. First, the employee selects the item to be changed. After clicking “Update,” he is then able to change the item’s price, name, location, or description.</p>
+                   </div>
+                    <div class=" col-lg-8 col-md-10 panel panel-primary" style="padding: 0;">
                       <div class="panel-heading">Use Case Diagram</div>
                       <div class="panel-body">
                          <div>
@@ -375,24 +388,31 @@
                          </div>
                       </div>
                     </div>
-                  <!--<div class="col-lg-4 col-md-12">-->
-                   <div class="well col-lg-4 col-md-12">
-                     <h4>Add Store Location</h4>
-                     <p>To add a new store location, a staff member clicks on the “Add new location” button on the main page of the Merchandise Management System software. From there, he can enter in store details (title, description, etc.) as well as upload a predetermined store inventory from a spreadsheet or enter items individually.</p>
-                   </div>
-                   <div class="well col-lg-4 col-md-12">
-                     <h4>Upload Store Inventory</h4>
-                     <p>If a store’s inventory ever needs to be changed on a large scale, a staff member can upload to the MMS a premade spreadsheet containing the inventory information. To do this, the employee clicks on a location to view that location’s details. From there, the employee can directly upload the new spreadsheet, which will update the database with the correct inventory information.</p>
-                   </div>
-                   <div class="well col-lg-12 col-md-12">
-                     <h4>Update Item Details</h4>
-                     <p>When an item’s details need to be changed, a staff member can do that manually from the MMS. First, the employee selects the item to be changed. After clicking “Update,” he is then able to change the item’s price, name, location, or description.</p>
-                   </div>
                   <!--</div>-->
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
                     <h1><small>Report on Two COTS Software Systems</small></h1>
+                      <h3><small>Revel Systems</small></h3>
+                      <ul>
+                          <li>Cloud based, made specifically for the iPad.</li>
+                          <li>Highly customizable, usable for stores and/or restaurants</li>
+                          <li>Includes inventory management, customer management, and even social media integration</li>
+                          <li>Substantial security</li>
+                          <li>Can change what level of control different employees have to the system</li>
+                          <li>Manage user ids and passwords</li>
+                          <li>Meets PCI compliance standards</li>
+                          <li>Data analytics application, shows graphs and reports of sales, inventory, and usage.</li>
+                          <li>Can handle all sizes of companies</li>
+                      </ul>
+                      <h3><small>AmberPOS</small></h3>
+                      <ul>
+                          <li>Windows-based, on-premise POS system</li>
+                          <li>Includes customer relationship management, keeping track of customer’s details/purchases</li>
+                          <li>Includes inventory management system</li>
+                          <li>Analyze and interpret sales</li>
+                          <li>Coupled with a vendor management system, allowing communication between retailer and supplier</li>
+                      </ul><br/>
                   </div>
                 </div>
                 <div class="row">
