--- a/cabezon/pages/amd.html
+++ b/cabezon/pages/amd.html
@@ -82,10 +82,10 @@
                             <a href="#"><i class="fa fa-cutlery fa-fw"></i> Feeding<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Scheduler</a>
+                                    <a href="scheduler.html">Scheduler</a>
                                 </li>
                                 <li>
-                                    <a class="active" href="morris.html">Automated Meal Dispersal</a>
+                                    <a class="active" href="amd.html">Automated Meal Dispersal</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -94,13 +94,13 @@
                             <a href="#"><i class="fa fa-bus fa-fw"></i> Tour<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="flot.html">Automated Tour System</a>
+                                    <a href="ats.html">Automated Tour System</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Interactive Communication &amp; Tracking System</a>
+                                    <a href="icts.html">Interactive Communication &amp; Tracking System</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Heads-Up Surveillance</a>
+                                    <a href="hus.html">Heads-Up Surveillance</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
